--- a/cameras.yaml
+++ b/cameras.yaml
@@ -7,3 +7,5 @@ cameras:
     rtspUrl: "rtsp://10.10.1.28:554/"
   - name: "冷蔵庫カメラ"
     rtspUrl: "rtsp://10.10.1.8:554/"
+  - name: "玄関外カメラ"
+    rtspUrl: "rtsp://admin:admin@10.10.1.25:554/ch0_0.264"
