--- a/kyw.yaml
+++ b/kyw.yaml
@@ -1,6 +1,6 @@
 cameras:
   - name: "絹子ベッド上カメラ"
-    rtspUrl: "rtsp://10.10.1.26:554/"
+    rtspUrl: "rtsp://10.10.1.26:554/0/av1"
   - name: "トイレ前カメラ"
     rtspUrl: "rtsp://admin:@10.10.1.18:554/0/av1"
   - name: "絹子部屋入口カメラ"
